--- a/index.html
+++ b/index.html
@@ -71,5 +71,14 @@
   </footer>
 
   <script src="script.js"></script>
+
+  <!-- Dialogflow Messenger chatbot -->
+  <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
+  <df-messenger
+    intent="WELCOME"
+    chat-title="bca_bot"
+    agent-id="5ee02dbe-6b80-4d92-b682-57c302c60a02"
+    language-code="en"
+  ></df-messenger>
 </body>
 </html>
