--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
   <df-messenger
     intent="WELCOME"
-    chat-title="bca_bot"
+    chat-title="chat bot"
     agent-id="5ee02dbe-6b80-4d92-b682-57c302c60a02"
     language-code="en"
   ></df-messenger>
